--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,13 +7,10 @@
 @import "core/fonts";
 @import "core/globals";
 
-@import 'core/buttons';
-
-
+@import "core/buttons";
 
 @import "shared/fonts";
 @import "shared/links";
-
 
 @import "components/preloader";
 @import "components/nav";
@@ -24,5 +21,3 @@
 @import "components/faqSectionl";
 @import "components/joinSection";
 @import "components/footer";
-
-
