--- a/src/scss/components/_faqSectionl.scss
+++ b/src/scss/components/_faqSectionl.scss
@@ -1,72 +1,67 @@
-.faqSection{
-    padding: 10rem 8rem;
-    height:max-content;
+.faqSection {
+  padding: 10rem 8rem;
+  height: max-content;
 
-    background: url('../assets/images/wave.png');
-    color: white;
-    background-size: cover;
-    background-repeat: no-repeat;
+  background: url("../assets/images/wave.png");
+  color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
 
-    &__container{
-        display: flex;
-        width: 100%;
-   
-        font-size: 55px;
-        font-weight: bold;
-        align-items: center;
+  &__container {
+    display: flex;
+    width: 100%;
 
-        &--text-container{
-            width: 50rem;
-            flex-basis: 50%;
-            h1{
-                width: 60%;
-            }
-        }
+    font-size: 55px;
+    font-weight: bold;
+    align-items: center;
 
-        &--questions-container{
-            display: flex;
-            flex-direction: column;
-            gap:2rem;
-            flex-basis: 50%;
-         
-
-            &--question-container{
-                padding: 2rem ;
-                border: 1px solid white;
-                border-radius: 0.5rem;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-            }
-        }
+    &--text-container {
+      width: 50rem;
+      flex-basis: 50%;
+      h1 {
+        width: 60%;
+      }
     }
+
+    &--questions-container {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      flex-basis: 50%;
+
+      &--question-container {
+        padding: 2rem;
+        border: 1px solid white;
+        border-radius: 0.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+    }
+  }
 }
 
-@media screen and (max-width:485px) {
-    .faqSection{
-        padding:10rem 1.2rem;
+@media screen and (max-width: 485px) {
+  .faqSection {
+    padding: 10rem 1.2rem;
 
-        &__container{
-            flex-direction: column;
+    &__container {
+      flex-direction: column;
 
-            &--text-container{
-                width: 100%;
-                padding-bottom: 6rem;
+      &--text-container {
+        width: 100%;
+        padding-bottom: 6rem;
 
-                h1{
-                    width: 100%;
-                    font-size: 4rem;
-                }
-           
-                
-            }
-
-            &--questions-container{
-                width: 100%;
-                flex-basis: 100%;
-               
-            }
+        h1 {
+          width: 100%;
+          font-size: 4rem;
         }
+      }
 
+      &--questions-container {
+        width: 100%;
+        flex-basis: 100%;
+      }
     }
+  }
 }
