--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,148 +1,138 @@
-.navbar{
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  // position: absolute;
+  width: 100%;
+
+  font-size: 2rem;
+
+  &__link-container {
     display: flex;
-    justify-content: space-between;
+    padding: 1rem 2rem;
     align-items: center;
-    box-sizing: border-box;
-// position: absolute;
-width: 100%;
+    gap: 4rem;
+    background: linear-gradient(
+      231.55deg,
+      rgba(255, 255, 255, 0.15) 2.21%,
+      rgba(255, 255, 255, 0.05) 100%
+    );
+    border-radius: 2rem;
+    backdrop-filter: blur(25px);
 
+    &--wallet-btn {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+    }
 
-    font-size:2rem;
-    
+    h3 {
+      background: linear-gradient(
+        90deg,
+        #e85c99 0%,
+        #a53de2 110.61%,
+        #ff3c5f 155.21%
+      );
+      background-position: right -100% bottom 0;
+      background-size: 200% 2px;
+      background-repeat: no-repeat;
+      transition: background-size 0.3s, background-position 0s 0.3s;
 
-    &__link-container{
-        display: flex;
-        padding: 1rem 2rem;
-        align-items: center;
-        gap:4rem;
-        background: linear-gradient(231.55deg, rgba(255, 255, 255, 0.15) 2.21%, rgba(255, 255, 255, 0.05) 100%);
-        border-radius: 2rem;
-backdrop-filter: blur(25px);
-
-&--wallet-btn{
-    display: flex;
-    gap:1rem;
-    align-items: center;
-}
-
-h3{
-    background: linear-gradient(90deg, #E85C99 0%, #A53DE2 110.61%, #FF3C5F 155.21%);
-    background-position: right -100% bottom 0;
-    background-size: 200% 2px;
-    background-repeat: no-repeat;
-    transition:
-    background-size 0.3s,
-    background-position 0s 0.3s ; 
-    
-
-    &:hover{
-        background-position: 100% 100%; 
+      &:hover {
+        background-position: 100% 100%;
         background-size: 100% 2px;
         cursor: pointer;
-       
+      }
     }
+  }
+
+  &__button {
+    padding: 1rem 2rem;
+  }
 }
 
+@media screen and (max-width: 485px) {
+  .navbar {
+    display: flex;
+    padding: 0;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    width: 100%;
 
+    &__link-container,
+    &__button {
+      display: none;
     }
-
-    &__button{
-        padding: 1rem 2rem;
-
-    }
-
-
+  }
 }
-
-@media screen and (max-width:485px) {
-    .navbar{
-        display: flex;
-        padding:0;
-        padding-top: 1rem;
-        padding-left: 1rem;
-        width: 100%;
-
-        &__link-container , &__button {
-            display: none;
-        }
-    }
-}
-
-
 
 // ---hero
 
+.hero-section {
+  padding: 5rem 4rem;
+  background-color: #07040d;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  height: max-content;
+  align-items: center;
 
-.hero-section{
-  
-
-    padding: 5rem 4rem;
-    background-color: #07040D;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    color: white;
-    height: max-content;
-    align-items: center;
-
-
-   &__hero-container{
+  &__hero-container {
     margin-top: 2rem;
     display: flex;
     gap: 7rem;
     align-items: center;
 
+    &--text-container {
+      width: max-content;
 
-    &--text-container{
-        width: max-content;
-       
-        height: max-content;
-        display: flex;
-        flex-direction: column;
-        gap:4rem;
+      height: max-content;
+      display: flex;
+      flex-direction: column;
+      gap: 4rem;
 
-        h1{
-            width: 40rem;
-            line-height: 3rem ;
-        }
+      h1 {
+        width: 40rem;
+        line-height: 3rem;
+      }
 
-        p{
-            width:50rem ;
-            line-height: 2rem ;
-        }
-       
+      p {
+        width: 50rem;
+        line-height: 2rem;
+      }
     }
-   }
+  }
 }
 
+@media screen and (max-width: 485px) {
+  .hero-section {
+    width: 100% !important;
 
-@media screen and (max-width:485px) {
-    .hero-section{
-        width: 100% !important;
-    
-        // padding:0 1rem;
-        padding:0;
-        padding-top: 1rem;
-        padding-left: 1rem;
+    // padding:0 1rem;
+    padding: 0;
+    padding-top: 1rem;
+    padding-left: 1rem;
 
-        &__hero-container{
-            flex-direction: column;
-            padding:0;
-            margin:0 !important;
-        
-            &--text-container{
-                h1{
-                    width: 20rem;
-                    line-height: 3rem ;
-                    font-size: 2.5rem;
-                }
-        
-                p{
-                    width:20rem ;
-                    line-height: 2rem ;
-                    font-size: 1.2rem;
-                }
-            }
+    &__hero-container {
+      flex-direction: column;
+      padding: 0;
+      margin: 0 !important;
+
+      &--text-container {
+        h1 {
+          width: 20rem;
+          line-height: 3rem;
+          font-size: 2.5rem;
         }
+
+        p {
+          width: 20rem;
+          line-height: 2rem;
+          font-size: 1.2rem;
+        }
+      }
     }
+  }
 }
